# hipi

./: .gitignore  README.md  algorithm_test.py  insert_client.py  pyproject.toml  query_client.py  test.ipynb  test.py
deploy/milvus/: docker-compose.yml
docs/: README_ko.md
img_class/: background_img.py  base.py  object_img.py
utils/: common_utils.py  shape_match_utils.py
was_src/: init_db.py  main.py  pyproject.toml  pytest.ini
was_src/api/v1/endpoints/: img.py
was_src/img/: background_img.py  base.py  best_match.py  cv_utils.py  object_img.py  shape_match_utils.py
was_src/milvus/collection/: obj.py  obj_ref.py
was_src/milvus/collection_schema/: obj_ref_schema.py  obj_schema.py
was_src/milvus/utils/: connection_pools.py  create_utils.py  minio_utils.py
was_src/tests/: test_main.py
was_src/tests/api/v1/endpoints/: test_img.py
