[tool.poetry]
name = "sw-capstone-3-10-0"
version = "0.1.0"
description = ""
authors = ["etkim <ket0825@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
