[tool.poetry]
name = "sw-capstone-3-10-0"
version = "0.1.0"
description = ""
authors = ["etkim <ket0825@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.2"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pymilvus = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"

[tool.pytest]
pythonpath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
